tests/bad_reserved_name_import_alias.stderr
tests/bad_reserved_name_import_alias.sl:35:43: error: identifier prefix '__sl_' is reserved
