tests/bad_reserved_name_import_alias.sl
import "slang/feature/optional" as __sl_bad
